// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading reducer should add loading state 1`] = `
Object {
  "REQUEST_ID": true,
}
`;

exports[`loading reducer should set loading state to false 1`] = `
Object {
  "REQUEST_ID": false,
}
`;
